Correção de nomes no relatorio.html

--- a/html/relatorio.html
+++ b/html/relatorio.html
@@ -6,9 +6,9 @@
   </head>
   <body>
     <form action="POST" class="formulario" id="formulario">
-        <label for="fname">First name:</label><br>
+        <label for="fname">Nome:</label><br>
         <input type="text" id="nome" name="nome"><br>
-        <label for="lname">Last name:</label><br>
+        <label for="lname">Idade:</label><br>
         <input type="int" id="idade" name="idade" ><br><br>
         <input type="submit" value="Submit" id="inserir">
       </form> 
